--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ const posts = (await Astro.glob('./posts/*.md')).sort(
 			<Masthead />
 			<Content>
 				<section>
-					<p class="mb-8">A place where software developers stay up-to-date and grow their careers. You can find long articles about how frontend & backend development The content is long-form, didactic and exploratory, and often finds a way to talk about Fullstack Libraries, Frameworks, Tips & Tricks.</p>
+					<p class="mb-8">India is one of the most promising countries in the world. India is going to stun the world with its prosperity, advancement, and progress. Its economy is growing stronger and stronger every day. India is an ideal place for investment. Many MNCs have already invested heavily in India, creating a ripple effect of job creation and wholesome economic activities.</p>
 				</section>
 				<section>
 					<ul class="grid grid-cols-1 md:grid-cols-2 gap-4">
