--- a/src/components/Masthead.astro
+++ b/src/components/Masthead.astro
@@ -1,6 +1,7 @@
 <section class="relative mb-6 h-40 flex justify-center items-center">
   <div class="z-10 text-center px-8 drop-shadow-lg shadow-black">
     <div class="uppercase text-sm mb-4">Welcome to</div>
-    <div class="text-4xl font-gt font-medium">A curated community for amazing <span class="text-orange-500">DEVS</span></div>
+    <div class="text-4xl font-gt font-medium">A curated community for amazing</div>
+    <div class="text-orange-500 text-4xl font-gt font-medium">Insights about India</div>
   </div>
 </section>
