--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import BaseHead from '../components/BaseHead.astro';
+import Analytics from '@vercel/analytics'
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
@@ -47,3 +48,4 @@ const posts = (await Astro.glob('./posts/*.md')).sort(
 		<Footer />
 	</Body>
 </html>
+<Analytics />
